# motorsportverse

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MODEL_CARD.md  README.md  SETUP.md  advanced_models.py  backfill_2018_2022.py  backfill_history.py  backtest.py  benchmark_gbm_libraries.py  benchmark_models.py  bet_sizing.py  championship_simulator.py  create_season_races.py  cross_season_backtest.py  deployment_check.py  drift_report.py  ergast_backfill.py  export_probabilities.py  export_value_data.py  export_website_data.py  extract_weekend_features.py  f1_prediction_utils.py  forward_eval.py  generate_circuit_svg.py  generate_fastf1_viz.py  gp_weekend.py  historical_backtest.py  leakage.py  odds_import_csv.py  odds_ingest.py  odds_ingest_betfair.py  odds_ingest_unified.py  odds_scraper.py  optuna_hp_search.py  predicted_results_2026.json  (+8 more)
projects/chrome-valley-racing/: README.md  pyproject.toml
projects/chrome-valley-racing/src/chrome_valley/: __init__.py  config.py  export.py  simulate.py
projects/chrome-valley-racing/tests/: test_export.py  test_simulate.py
projects/chrome-valley-racing/website/: .gitignore  package-lock.json  package.json
projects/chrome-valley-racing/website/scripts/: shoot.mjs
projects/f2-predictions/: README.md  pyproject.toml
projects/f2-predictions/data/: official_2026.json
projects/f2-predictions/src/f2_predictions/: __init__.py  backfill.py  bootstrap_next_season.py  config.py  datasource.py  drift_report.py  export.py  forward_eval.py  historical_backtest.py  ml_skill.py  model.py  pipeline.py  position_head.py  predict.py  promotion_decision.py  race_weekend.py  refresh.py  scrape.py  season_rollover.py  train_race_pace.py
projects/f2-predictions/tests/: test_backfill.py  test_calibration_gate.py  test_fia_scraper.py  test_historical_backtest.py  test_leakage.py  test_ml_skill.py  test_model_f2.py  test_pipeline.py  test_position_head.py  test_predictions_sanity.py  test_race_pace_seam.py  test_race_weekend.py  test_real_data.py  test_season_rollover.py  test_smoke.py  test_sources.py  test_website_data_schema.py  test_wrong_event_guards.py
projects/f2-predictions/website/: README.md  next.config.ts  package-lock.json  package.json
projects/f2-predictions/website/scripts/: shoot.mjs
projects/f3-predictions/: README.md  pyproject.toml
projects/f3-predictions/data/: official_2026.json
projects/f3-predictions/src/f3_predictions/: __init__.py  backfill.py  bootstrap_next_season.py  config.py  datasource.py  drift_report.py  export.py  forward_eval.py  historical_backtest.py  ml_skill.py  model.py  pipeline.py  position_head.py  predict.py  promotion_decision.py  race_weekend.py  refresh.py  scrape.py  season_rollover.py  train_race_pace.py
projects/f3-predictions/tests/: test_backfill.py  test_calibration_gate.py  test_fia_scraper.py  test_historical_backtest.py  test_leakage_f3.py  test_ml_skill.py  test_model_f3.py  test_pipeline.py  test_position_head.py  test_predictions_sanity.py  test_race_pace_seam.py  test_race_weekend.py  test_real_data.py  test_season_rollover.py  test_smoke.py  test_sources.py  test_website_data_schema.py  test_wrong_event_guards.py
projects/f3-predictions/website/: README.md  package-lock.json  package.json
projects/f3-predictions/website/scripts/: shoot.mjs
projects/formula-e-predictions/: .gitignore  README.md  pyproject.toml
projects/formula-e-predictions/data/: official_2026.json
projects/formula-e-predictions/tests/: conftest.py  test_backfill.py  test_calibration_gate.py  test_forward_eval.py  test_historical_backtest.py  test_leakage_fe.py  test_ml_skill.py  test_model_fe.py  test_pipeline.py  test_position_head.py  test_race_weekend.py  test_season_rollover.py  test_smoke.py  test_sources.py  test_website_data_schema.py  test_wrong_event_guards.py
projects/formula-e-predictions/website/: README.md  package-lock.json  package.json
projects/indycar-predictions/: .gitignore  README.md  pyproject.toml
projects/indycar-predictions/data/: CURATION_REPORT.md  SOURCES.md  calendar_2026.json  driver_aliases.json  history_2012.json  history_2013.json  history_2014.json  history_2015.json  history_2016.json  history_2017.json  history_2018.json  history_2019.json  history_2020.json  history_2021.json  history_2022.json  history_2023.json  history_2024.json  history_2025.json  history_2026.json
projects/indycar-predictions/scripts/: build_calendar.py  curate_all.py  curate_season.py  load_history.py  parse.py  wiki.py
projects/indycar-predictions/tests/: conftest.py  test_backfill.py  test_calibration_gate.py  test_forward_eval.py  test_historical_backtest.py  test_leakage_indycar.py  test_ml_skill.py  test_model_indycar.py  test_pipeline.py  test_position_head.py  test_race_weekend.py  test_season_rollover.py  test_smoke.py  test_sources.py  test_website_data_schema.py  test_wrong_event_guards.py
projects/indycar-predictions/website/: README.md  package-lock.json  package.json
projects/motogp-predictions/: README.md  pyproject.toml
projects/motogp-predictions/tests/: test_smoke.py
projects/nascar-predictions/: .gitignore  README.md  pyproject.toml
projects/nascar-predictions/data/: official_2026.json
projects/nascar-predictions/tests/: conftest.py  test_backfill.py  test_calibration_gate.py  test_championship_playoffs.py  test_forward_eval.py  test_historical_backtest.py  test_leakage_nascar.py  test_ml_skill.py  test_model_nascar.py  test_pipeline.py  test_playoff_backtest.py  test_position_head.py  test_race_weekend.py  test_season_rollover.py  test_smoke.py  test_sources.py  test_website_data_schema.py  test_wrong_event_guards.py
projects/nascar-predictions/website/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
projects/prism-cup-karting/: README.md  pyproject.toml
projects/prism-cup-karting/tests/: test_export.py  test_simulate.py
projects/prism-cup-karting/website/: package-lock.json  package.json
templates/project-template/: README.md  pyproject.toml
templates/project-template/tests/: test_smoke.py
(+1631 files in other folders)
