[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-valley-racing"
version = "0.1.0"
description = "Chrome Valley Racing League — a fan-made, fully simulated racing story (anthropomorphic race cars in small-town Americana). All characters, venues and results are original and synthetic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MotorsportVerse" }]
# Deliberately stdlib-only: the whole league is a seeded random.Random story.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
