[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f2-predictions"
version = "0.1.0"
description = "Race-outcome forecasts for the FIA Formula 2 championship — first MotorsportVerse expansion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MotorsportVerse" }]
dependencies = [
    "motorsport-core",
    "motorsport-data",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
