[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f3-predictions"
version = "0.1.0"
description = "Race-outcome forecasts for the FIA Formula 3 championship — third series on the MotorsportVerse core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MotorsportVerse" }]
dependencies = [
    "motorsport-core",
    "motorsport-data",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
# scikit-learn arrives transitively via motorsport-core; xgboost is optional and
# upgrades the GBR-only skill signal to the full GBR+XGB ensemble (F1 parity).
ml = ["xgboost>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
