[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formula-e-predictions"
version = "0.1.0"
description = "E-Prix forecasts for the ABB FIA Formula E World Championship."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["motorsport-core", "motorsport-data"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
