[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formula-e-predictions"
version = "0.2.0"
description = "E-Prix forecasts for the ABB FIA Formula E World Championship — fourth series on the MotorsportVerse core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MotorsportVerse" }]
dependencies = [
    "motorsport-core",
    "motorsport-data",
    "requests>=2.31",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
# scikit-learn arrives transitively via motorsport-core; xgboost is optional
# and upgrades the GBR-only skill signal to the full GBR+XGB ensemble
# (F1 parity). duckdb powers the backfill HistoryStore.
ml = ["xgboost>=2.0"]
store = ["duckdb>=0.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
