[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indycar-predictions"
version = "0.2.0"
description = "Snapshot-primary race forecasts for the NTT IndyCar Series (oval, road, street) — sixth series on the MotorsportVerse core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MotorsportVerse" }]
dependencies = [
    "motorsport-core",
    "motorsport-data",
    "requests>=2.31",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
# scikit-learn arrives transitively via motorsport-core; xgboost is optional
# and upgrades the GBR-only skill signal to the full GBR+XGB ensemble
# (F1 parity — run it with OMP_NUM_THREADS=1 for determinism). duckdb powers
# the backfill HistoryStore.
ml = ["xgboost>=2.0"]
store = ["duckdb>=0.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
