[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motogp-predictions"
version = "0.1.0"
description = "Grand Prix motorcycle racing forecasts for MotoGP."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["motorsport-core", "motorsport-data"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
